--- a/Resources/config/form_fieldtype_handlers.yml
+++ b/Resources/config/form_fieldtype_handlers.yml
@@ -17,6 +17,7 @@ parameters:
     netgen.ezforms.form.fieldtype_handler.ezbinaryfile.class: Netgen\Bundle\EzFormsBundle\Form\FieldTypeHandler\BinaryFile
     netgen.ezforms.form.fieldtype_handler.ezgmaplocation.class: Netgen\Bundle\EzFormsBundle\Form\FieldTypeHandler\MapLocation
     netgen.ezforms.form.fieldtype_handler.ezobjectrelation.class: Netgen\Bundle\EzFormsBundle\Form\FieldTypeHandler\Relation
+    netgen.ezforms.form.fieldtype_handler.tags.class: Netgen\Bundle\EzFormsBundle\Form\FieldTypeHandler\Tags
 
 services:
     netgen.ezforms.form.fieldtype_handler.ezimage:
@@ -116,3 +117,11 @@ services:
           - "@ezpublish.translation_helper"
         tags:
             - {name: netgen.ezforms.form.fieldtype_handler, alias: ezobjectrelation}
+
+    netgen.ezforms.form.fieldtype_handler.tags:
+        class: "%netgen.ezforms.form.fieldtype_handler.tags.class%"
+        arguments:
+          - "@ezpublish.api.service.tags"
+          - "@ezpublish.api.repository"
+        tags:
+            - { name: netgen.ezforms.form.fieldtype_handler, alias: eztags }
